--- a/depq.cabal
+++ b/depq.cabal
@@ -30,19 +30,24 @@ library
     , containers >= 0.6.0.1
     , deepseq >= 1.4.4
     , psqueues >= 0.2.7.2
+    , QuickCheck
   default-language: Haskell2010
+  ghc-options: -Wall
 
 
 
--- test-suite depq-test
---   type: exitcode-stdio-1.0
---   main-is: Spec.hs
---   other-modules:
---       Paths_depq
---   hs-source-dirs:
---       test
---   ghc-options: -threaded -rtsopts -with-rtsopts=-N
---   build-depends:
---       base >=4.7 && <5
---     , depq
---   default-language: Haskell2010
+test-suite depq-test
+  type: exitcode-stdio-1.0
+  main-is: Spec.hs
+  other-modules:
+      Paths_depq
+  hs-source-dirs:
+      test
+  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
+  build-depends:
+      base >=4.7 && <5
+    , depq
+    , QuickCheck
+    , hspec
+    , containers
+  default-language: Haskell2010
